@@ -16,6 +16,7 @@ dillo-2.2 [??]
    is simpler and helps to avoid race conditions.
  - Updated CCCwork.txt to the new scheme.
  - Fixed a bug with OPTION element (it was parsing entities twice).
+ - Bugfix: remove the empty cache entry lingering after connection abort.
    Patches: Jorge Arellano Cid
 +- Fix segfault from AREA when MAP is missing name attribute.
  - Fix image map coordinates when margin/border/padding present.
